--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css " />
   </head>
   <body>
     <nav class="navbar">
@@ -12,6 +13,7 @@
         <div class="logo">
           <img src="assets/Logo.svg" alt="" />
         </div>
+        <input type="checkbox" id="check" />
 
         <ul class="nav-links">
           <li>Home</li>
@@ -20,20 +22,29 @@
           <li>Blogs</li>
         </ul>
 
-        <button class="btn-outline">Gift Finder</button>
+        <div class="nav-btn-wrapper">
+          <button class="btn-outline">Gift Finder</button>
+          <label class="burger-menu" for="check">
+            <div class="btn"><img src="assets/icons/burger-menu.png" alt=""></div>
+          </label>
+        </div>
+
+        <label for="check" class="dark-menu-bg"></label>
       </div>
     </nav>
 
     <header class="header">
       <div class="header-grid">
-        <div class="box text-box">
-          <h1 class="text-box-main-title">
-            Find a gift for your wife or girlfriend
-          </h1>
-          <p class="text-box-paragraph">
-            Struggling to find a gift for your wife or girlfriend? No problem!
-          </p>
-          <button class="btn">Find gift now</button>
+        <div class="text-box-wrapper text-box-wrapper-1">
+          <div class="box text-box">
+            <h1 class="text-box-main-title">
+              Find a gift for your wife or girlfriend
+            </h1>
+            <p class="text-box-paragraph">
+              Struggling to find a gift for your wife or girlfriend? No problem!
+            </p>
+            <button class="btn">Find gift now</button>
+          </div>
         </div>
 
         <div class="box box-img">
@@ -44,15 +55,17 @@
           <img src="assets/promo-img-2.png" alt="" />
         </div>
 
-        <div class="box text-box">
-          <h1 class="text-box-title">How we work</h1>
-          <p class="text-box-paragraph">
-            We’ve actually already asked hundreds of women what they want, and
-            made a database with the results. All you have to do is take our
-            short survey that only takes seconds, and our proprietary algorithm
-            will match you with a few perfect gift options.
-          </p>
-          <button class="btn-outline">Learn More</button>
+        <div class="text-box-wrapper text-box-wrapper-2">
+          <div class="box text-box">
+            <h1 class="text-box-title">How we work</h1>
+            <p class="text-box-paragraph">
+              We’ve actually already asked hundreds of women what they want, and
+              made a database with the results. All you have to do is take our
+              short survey that only takes seconds, and our proprietary
+              algorithm will match you with a few perfect gift options.
+            </p>
+            <button class="btn-outline">Learn More</button>
+          </div>
         </div>
       </div>
     </header>
@@ -66,35 +79,117 @@
 
         <div class="cards-grid">
           <div class="card">
-            <img src="" alt="" />
-            <div class="card-title">Birthday</div>
-            <div class="card-link">See More ›</div>
+            <img src="assets/gift-card-img-1.png" alt="" />
+            <div class="card-text">
+              <div class="card-title">Birthday</div>
+              <div class="card-link">See More ›</div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="assets/gift-card-img-2.png" alt="" />
+            <div class="card-text">
+              <div class="card-title">Birthday</div>
+              <div class="card-link">See More ›</div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="assets/gift-card-img-3.png" alt="" />
+            <div class="card-text">
+              <div class="card-title">Birthday</div>
+              <div class="card-link">See More ›</div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="assets/gift-card-img-4.png" alt="" />
+            <div class="card-text">
+              <div class="card-title">Birthday</div>
+              <div class="card-link">See More ›</div>
+            </div>
           </div>
         </div>
       </section>
+    </div>
 
-      <section class="blog"></section>
+    <div class="ready">
+      <div class="container">
+        <div class="ready-text">
+          <h3>Ready to get started?</h3>
+          <h3>Sign up or contact us</h3>
+        </div>
 
-      <footer class="footer">
-        <div class="contianer">
-          <ul class="footer-nav">
-            <li>Home</li>
-            <li>About</li>
-            <li>Service</li>
-            <li>Blog</li>
-          </ul>
-          <h1></h1>
-          <div class="footer-links">
-            <a href="#"><img src="assets/icons/facebook.svg" alt="" /></a>
-            <a href="#"><img src="assets/icons/instagram.svg" alt="" /></a>
-            <a href="#"><img src="assets/icons/twitter.svg" alt="" /></a>
-            <a href="#"><img src="assets/icons/youtube.svg" alt="" /></a>
-            <a href="#"><img src="assets/icons/pinterest.svg" alt="" /></a>
+        <div class="ready-btns">
+          <button class="btn">Find gift now</button>
+          <button class="btn-outline">how it works</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <section class="blog">
+        <h2 class="title">Our Best Blogs Ever</h2>
+        <p class="paragraph">
+          Our Best Blogs Ever “Try our blog to find the best tips and tricks to
+          select your gift”
+        </p>
+
+        <div class="blog-grid">
+          <div class="blog-card-long">
+            <div class="blog-card-long-img">
+              <img src="assets/bast-blog.png" alt="" />
+            </div>
+            <div class="blog-card-long-text">
+              <div class="blog-card-long-name">Mr. John Doe</div>
+              <div class="blog-card-long-title">
+                The best way to wish your wife
+              </div>
+              <a href="#" class="blog-card-long-link">Read More</a>
+            </div>
+          </div>
+          <div class="blog-card">
+            <div class="blog-card-title">
+              Database to find the gifts for your girlfriend
+            </div>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore...
+            </p>
+            <a href="#" class="blog-card-link">Read More</a>
           </div>
 
-          <div class="copyright">© 2024 Created by — Shakhzod</div>
+          <div class="blog-card">
+            <div class="blog-card-title">
+              How Artificial Intelligence read your mind to find the best gift
+            </div>
+            <p class="paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore...
+            </p>
+            <a href="#" class="blog-card-link">Read More</a>
+          </div>
         </div>
-      </footer>
+      </section>
     </div>
+
+    <footer class="footer">
+      <div class="container">
+        <ul class="footer-nav">
+          <li>Home</li>
+          <li>About</li>
+          <li><img src="assets/logo-orange.svg" alt="" /></li>
+          <li>Service</li>
+          <li>Blog</li>
+        </ul>
+        <hr />
+        <div class="footer-links">
+          <a href="#"><img src="assets/icons/facebook.svg" alt="" /></a>
+          <a href="#"><img src="assets/icons/instagram.svg" alt="" /></a>
+          <a href="#"><img src="assets/icons/twitter.svg" alt="" /></a>
+          <a href="#"><img src="assets/icons/youtube.svg" alt="" /></a>
+          <a href="#"><img src="assets/icons/pinterest.svg" alt="" /></a>
+        </div>
+
+        <div class="copyright">© 2024 Created by — Shakhzod</div>
+      </div>
+    </footer>
   </body>
 </html>
